fix: accent alt for dark mode

--- a/snippets/css/variable.css
+++ b/snippets/css/variable.css
@@ -162,4 +162,20 @@ body.theme-light:not(.color-active-default) .print {
 }
 body.theme-dark:not(.color-active-default),
 body.theme-dark:not(.color-active-default) .print {
+  --accent-active: var(
+    --setting-color-active-custom,
+    hsl(
+      calc(var(--accent-h) + 60),
+      calc(var(--accent-s) - 12%),
+      calc(var(--accent-l) - 12%)
+    )
+  );
+  --accent-inactive: var(
+    --setting-color-active-custom,
+    hsl(
+      calc(var(--accent-h) + 60),
+      calc(var(--accent-s) - 12%),
+      calc(var(--accent-l) - 28%)
+    )
+  );
 }
