--- a/snippets/editor/cursor.scss
+++ b/snippets/editor/cursor.scss
@@ -1,5 +1,5 @@
 /* ====== 光标 ====== */
 
 :is(.markdown-source-view.mod-cm6 .cm-content, .mod-cm6 .cm-line, .fancy-cursor input.prompt-input) {
-  caret-color: var(--text-accent);
+  caret-color: var(--accent-active);
 }
