--- a/snippets/workspace/message.scss
+++ b/snippets/workspace/message.scss
@@ -9,4 +9,16 @@ body.message-modify {
   :is(.tooltip, .notice) {
     color: var(--setting-message-fg, var(--text-on-accent));
   }
+
+  &:not(.color-active-default) {
+    &.theme-light {
+      --background-modifier-message: hsl(var(--setting-message-bg,
+            calc(var(--accent-h) + 60) calc(var(--accent-s) - 12%) calc(var(--accent-l) + 4%)));
+    }
+
+    &.theme-dark {
+      --background-modifier-message: hsl(var(--setting-message-bg,
+            calc(var(--accent-h) + 60) calc(var(--accent-s) - 12%) calc(var(--accent-l) - 12%)));
+    }
+  }
 }
